yamls/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: graylog
  creationTimestamp: null
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: mongo
    spec:
      containers:
      - image: mongo:3
        # Repositório oficial - mongo:3
        name: mongo
        resources: {}
        
        volumeMounts:
        - name: mongodb-volume
          mountPath: /data/db

      restartPolicy: Always

      volumes:
      - name: mongodb-volume-stg
        persistentVolumeClaim:
          claimName: mongodb-pvc-stg
status: {}
