yamls/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: graylog
  creationTimestamp: null
  labels:
    service: mongo
  name: mongo
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    service: mongo
status:
  loadBalancer: {}
