yamls/graylog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: graylog
  name: graylog
  annotations:
    allow.http: "false"
spec:
  rules:
  - host: graylog.rancher.k8smaster.club
    http:
      paths:
        - path: /
          backend:
            serviceName: graylog
            servicePort: 9000
